--- a/EasyLearn/Views/Admin/UpgradeUser.cshtml
+++ b/EasyLearn/Views/Admin/UpgradeUser.cshtml
@@ -88,7 +88,7 @@
                             New role
                             <span>
                                 <input type="hidden" id="UserId" value="@Model.Data.Id" name="UserId" class="" />
-                                <select asp-for="Data.RoleId" asp-items="ViewBag.roles" name="RoleId" required multiple> <option value="" selected>--Select Role--</option></select>
+                                <select asp-for="Data.RoleId" asp-items="ViewBag.roles" name="RoleId" required> <option value="" selected>--Select Role--</option></select>
                             </span>
                             @*<span><input type="number" id="" class="" /></span>*@
                         </li>
