--- a/EasyLearn/Views/Course/DeletePreview.cshtml
+++ b/EasyLearn/Views/Course/DeletePreview.cshtml
@@ -1,4 +1,4 @@
-﻿@model EasyLearn.Models.DTOs.CourseDTOs.CourseRequestModel
+﻿@model EasyLearn.Models.DTOs.CourseDTOs.CourseResponseModel
 
 @{
     //ViewBag.Title = "title";
