--- a/EasyLearn/Views/Course/GetAll.cshtml
+++ b/EasyLearn/Views/Course/GetAll.cshtml
@@ -1,4 +1,4 @@
-﻿@model EasyLearn.Models.DTOs.CourseDTOs.CoursesRequestModel
+﻿@model EasyLearn.Models.DTOs.CourseDTOs.CoursesResponseModel
 
 @{
     //ViewBag.Title = "title";
