--- a/EasyLearn/Views/Course/Update.cshtml
+++ b/EasyLearn/Views/Course/Update.cshtml
@@ -1,5 +1,6 @@
-﻿@using EasyLearn.Models.Enums;
-@model EasyLearn.Models.DTOs.CourseDTOs.CourseRequestModel
+﻿@using System.Security.Claims;
+@using EasyLearn.Models.Enums;
+@model EasyLearn.Models.DTOs.CourseDTOs.CourseResponseModel
 
 @{
     //ViewBag.Title = "title";
@@ -7,7 +8,9 @@
 }
 
 <h2>title</h2>
-
+@{
+    var userRole =User.FindFirstValue(ClaimTypes.Role);
+}
 <br>
 <div class="row row-content d-flex justify-content-center">
     <div class="col-md-6">
@@ -17,6 +20,24 @@
                 <form method="POST">
                     <p>Check the details carefully before clicking on the Update button</p>
                     <input name="Id" value="@Model.Data.Id" type="hidden" />
+                    @if (userRole.ToLower() == "admin" || userRole.ToLower() == "moderator" || userRole.ToLower() == "instructor")
+                    {
+                        <div>
+                            <label asp-for="Data.DifficultyLevel" class="control-label">Active Satus</label>
+                            @Html.CheckBoxFor(x => x.Data.IsActive)
+                            
+                        </div>
+
+                    }
+                    <div>
+                        <label asp-for="Data.DifficultyLevel" class="control-label"></label>
+
+                        <select asp-for="Data.DifficultyLevel" class="form-control"
+                                asp-items="Html.GetEnumSelectList<DifficultyLevel>()"></select>
+
+                    </div>
+
+
                     <div>
                         <label asp-for="Data.Title" class="control-label"></label>
                         <input name="Title" value="@Model.Data.Title" type="text" class="form-control" required />
