--- a/EasyLearn/Views/Moderator/GetAllActiveModerators.cshtml
+++ b/EasyLearn/Views/Moderator/GetAllActiveModerators.cshtml
@@ -62,7 +62,7 @@
                                     <td>@item.Email</td>
 
                                     <td>
-                                        06 Apr, 2020
+                                        @item.CreatedOn
                                     </td>
                                     <td id="tooltip-container1">
                                         <a href="javascript:void(0);" class="me-3 text-primary" data-bs-container="#tooltip-container1" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit"><i class="mdi mdi-pencil font-size-18"></i></a>
