--- a/EasyLearn/Views/Shared/_topbar.cshtml
+++ b/EasyLearn/Views/Shared/_topbar.cshtml
@@ -40,7 +40,7 @@
             <div class="dropdown dropdown-mega d-none d-lg-block ms-2">
                 <button type="button" class="btn header-item waves-effect" data-bs-toggle="dropdown"
                     aria-haspopup="false" aria-expanded="false">
-                    Mega Menu
+                    Menu
                     <i class="mdi mdi-chevron-down"></i>
                 </button>
                 <div class="dropdown-menu dropdown-megamenu">
@@ -49,76 +49,79 @@
 
                             <div class="row">
                                 <div class="col-md-4">
-                                    <h5 class="font-size-14">UI Components</h5>
+                                    <h5 class="font-size-14">Programming & Dev</h5>
                                     <ul class="list-unstyled megamenu-list">
                                         <li>
-                                            <a href="javascript:void(0);">Lightbox</a>
+                                            <a href="javascript:void(0);">web development</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Range Slider</a>
+                                            <a href="javascript:void(0);">mobile app dev</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Sweet Alert</a>
+                                            <a href="javascript:void(0);">programming languages</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Rating</a>
+                                            <a href="javascript:void(0);">software engineering</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Forms</a>
+                                            <a href="javascript:void(0);">other </a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Tables</a>
+                                            <a href="javascript:void(0);">Game Development</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Charts</a>
+                                            <a href="javascript:void(0);">Cloud Computing</a>
                                         </li>
                                     </ul>
                                 </div>
 
                                 <div class="col-md-4">
-                                    <h5 class="font-size-14">Applications</h5>
+                                    <h5 class="font-size-14">Business & Finance</h5>
                                     <ul class="list-unstyled megamenu-list">
                                         <li>
                                             <a href="javascript:void(0);">Ecommerce</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Calendar</a>
+                                            <a href="javascript:void(0);">Finance and Investing</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Email</a>
+                                            <a href="javascript:void(0);">Entrepreneurship</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Projects</a>
+                                            <a href="javascript:void(0);">Project Management</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Tasks</a>
+                                            <a href="javascript:void(0);">Business Communication</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Contacts</a>
+                                            <a href="javascript:void(0);">
+                                                Economics
+                                            </a>
                                         </li>
                                     </ul>
                                 </div>
 
                                 <div class="col-md-4">
-                                    <h5 class="font-size-14">Extra Pages</h5>
+                                    <h5 class="font-size-14">Health & Wellness</h5>
                                     <ul class="list-unstyled megamenu-list">
                                         <li>
-                                            <a href="javascript:void(0);">Light Sidebar</a>
+                                            <a href="javascript:void(0);">Fitness and Exercise</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Compact Sidebar</a>
+                                            <a href="javascript:void(0);">Nutrition and Diet</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Horizontal layout</a>
+                                            <a href="javascript:void(0);">Yoga and Meditation</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Maintenance</a>
+                                            <a href="javascript:void(0);">Alternative Medicine
+Women's Health</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Coming Soon</a>
+                                            <a href="javascript:void(0);">Men's Health</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Timeline</a>
+                                            <a href="javascript:void(0);">Aging and Geriatrics</a>
                                         </li>
                                         <li>
                                             <a href="javascript:void(0);">FAQs</a>
@@ -131,28 +134,28 @@
                         <div class="col-sm-4">
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <h5 class="font-size-14">UI Components</h5>
+                                    <h5 class="font-size-14">Language Learning</h5>
                                     <ul class="list-unstyled megamenu-list">
                                         <li>
-                                            <a href="javascript:void(0);">Lightbox</a>
+                                            <a href="javascript:void(0);">Grammar and Vocabulary</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Range Slider</a>
+                                            <a href="javascript:void(0);">Conversational Skills</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Sweet Alert</a>
+                                            <a href="javascript:void(0);">Business Language</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Rating</a>
+                                            <a href="javascript:void(0);">Culture and Society</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Forms</a>
+                                            <a href="javascript:void(0);">Emotional Intelligence</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Tables</a>
+                                            <a href="javascript:void(0);">Stress Management</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Charts</a>
+                                            <a href="javascript:void(0);">Mindfulness and Meditation</a>
                                         </li>
                                     </ul>
                                 </div>
