--- a/EasyLearn/Views/Admin/FindUser.cshtml
+++ b/EasyLearn/Views/Admin/FindUser.cshtml
@@ -1,5 +1,5 @@
-﻿@model EasyLearn.Models.DTOs.CourseDTOs.CoursesResponseModel
-
+﻿@*@using EasyLearn.Models.DTOs.UserDTOs;
+@model UsersResponseModel*@
 @{
     //ViewBag.Title = "title";
     Layout = "_Layout";
@@ -7,22 +7,19 @@
 <div class="row">
     <div class="col-sm-11">
         <h2>
-            <a asp-action="Create">Create Course</a>
+            <a>Search results..</a>
         </h2>
         <div class="table-responsive">
 
             <table class="table table-hover table-striped table-bordered">
                 <thead>
                     <tr>
+                        
                         <th scope="col">#</th>
-                        <th scope="col">Title</th>
-                        <th scope="col">Description</th>
-                        <th scope="col">CourseLanguage</th>
-                        <th scope="col">DifficultyLevel</th>
-                        <th scope="col">Requirement</th>
-                        <th scope="col">CourseDuration</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Instructor Name </th>
+                        <th scope="col">First Name</th>
+                        <th scope="col">Last Name</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Gender</th>
                         <th scope="col"></th>
                         <th scope="col"></th>
                         <th scope="col"></th>
@@ -36,23 +33,20 @@
                     {
                         <tr>
                             <th scope="row">@serialNumber </th>
-                            <td>@item.Title</td>
-                            <td>@item.Description</td>
-                            <td>@item.CourseLanguage</td>
-                            <td>@item.DifficultyLevel</td>
-                            <td>@item.Requirement</td>
-                            <td>@item.CourseDuration</td>
-                            <td>@item.Price</td>
-                            <td>@item.InstructorId</td>
+                            <td>@item.FirstName</td>
+                            <td>@item.LastName</td>
+                            <td>@item.Email</td>
+                            <td>@item.Gender</td>
+
                             <td>
-                                <a asp-action="Detail" asp-route-id="@item.Id" class="btn btn-success">Details</a>
+                            <a asp-action="Detail" asp-route-id="@item.Id" class="btn btn-success">Details</a>
                             </td>
                             <td>
                                 <a asp-action="DeletePreview" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
                             </td>
 
                             <td>
-                                <a asp-action="Update" asp-route-id="@item.Id" class="btn btn-info">Update</a>
+                                <a asp-controller="Admin" asp-action="UpgradeUser" asp-route-userId="@item.Id" class="btn btn-info">Upgrade</a>
                             </td>
 
                         </tr>
@@ -68,3 +62,4 @@
 
     </div>
 </div>
+
