--- a/EasyLearn/Views/Instructor/GetAllActive.cshtml
+++ b/EasyLearn/Views/Instructor/GetAllActive.cshtml
@@ -1,14 +1,116 @@
 ﻿@model EasyLearn.Models.DTOs.InstructorDTOs.InstructorsResponseModel
 
 @{
+    ViewBag.Title = "Customers";
+    ViewBag.pTitle = "Customers";
+    ViewBag.pageTitle = "Ecommerce";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<!-- DataTables -->
+<link href="~/assets/libs/datatables.net-bs4/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+
+<!-- Responsive datatable examples -->
+<link href="~/assets/libs/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="card-body">
+                <div>
+                    <a asp-controller="Instructor" asp-action="RegisterInstructor" class="btn btn-success mb-2"><i class="mdi mdi-plus me-2"></i> Add Instructor</a>
+                </div>
+                <div class="table-responsive mt-3">
+                    <table class="table table-centered datatable dt-responsive nowrap " style="border-collapse: collapse; border-spacing: 0; width: 100%;">
+                        <thead class="thead-light">
+                            <tr>
+                                <th style="width: 20px;">
+                                    <div class="form-check">
+                                        <input type="checkbox" class="form-check-input" id="customercheck">
+                                        <label class="form-check-label mb-0" for="customercheck">&nbsp;</label>
+                                    </div>
+                                </th>
+                                <th>#</th>
+                                <th>First Name</th>
+                                <th>Last Name</th>
+                                <th>Email</th>
+                                <th>Date Joined</th>
+                                <th style="width: 120px;">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+
+                            @{
+                                var serialNumber = 1;
+                            }
+
+                            @foreach (var item in Model.Data)
+                            {
+                                <tr>
+                                    <td>
+                                        <div class="form-check">
+                                            <input type="checkbox" class="form-check-input" id="customercheck1">
+                                            <label class="form-check-label mb-0" for="customercheck1">&nbsp;</label>
+                                        </div>
+                                    </td>
+
+                                    <td> @serialNumber</td>
+                                    
+                                    <td>@item.FirstName</td>
+                                    <td>@item.LastName</td>
+                                    <td>@item.Email</td>
+
+                                    <td>
+                                        @item.CreatedOn
+                                    </td>
+                                    <td id="tooltip-container1">
+                                        <a href="javascript:void(0);" class="me-3 text-primary" data-bs-container="#tooltip-container1" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit"><i class="mdi mdi-pencil font-size-18"></i></a>
+                                        <a href="javascript:void(0);" class="text-danger" data-bs-container="#tooltip-container1" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete"><i class="mdi mdi-trash-can font-size-18"></i></a>
+                                    </td>
+                                </tr>
+                                @(serialNumber++);
+                            }
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- end row -->
+<!-- JAVASCRIPT -->
+@*<script src="~/assets/libs/jquery/jquery.min.js"></script>
+<script src="~/assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="~/assets/libs/metismenu/metisMenu.min.js"></script>
+<script src="~/assets/libs/simplebar/simplebar.min.js"></script>
+<script src="~/assets/libs/node-waves/waves.min.js"></script>*@
+
+<!-- Required datatable js -->
+<script src="~/assets/libs/datatables.net/js/jquery.dataTables.min.js"></script>
+<script src="~/assets/libs/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
+
+<!-- Responsive examples -->
+<script src="~/assets/libs/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
+<script src="~/assets/libs/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
+
+<script src="~/assets/js/pages/ecommerce-datatables.init.js"></script>
+
+<script src="~/assets/js/app.js"></script>
+
+
+
+
+@{
     //ViewBag.Title = "title";
 
+    /*
+    *
 
+            Layout = "_Layout";
 
-    Layout = "_Layout";
-}
-<div class="row">
-    <div class="col-sm- 1">
+    <div class="row">
+        <div class="col-sm- 1">
 
         <div class="search-container-side">
             <!-- search box  -->
@@ -18,12 +120,12 @@
                 <form asp-controller="Instructor" asp-action="GetByEmail">
                     <input type="text" placeholder="Search by Instructor Email.." name="email">
                     <button type="submit"><i class="fa fa-search"></i> Search</button>
-                </form>
+            </form>
 
 
 
 
-            </div>
+        </div>
         </div>
 
 
@@ -33,28 +135,28 @@
             <div class="search-container">
                 <form asp-controller="Instructor" asp-action="GetByName">
                     <input type="text" placeholder="Search by Instructor Name.." name="name">
-                    <button type="submit">
+                        <button type="submit">
                         <i class="fa fa-search"></i> Search
-                    </button>
-                </form>
-            </div>
+                </button>
+            </form>
         </div>
-
     </div>
 
+            </div>
 
-</div>
+
+        </div>
 
 
-<div class="col-sm-11">
-    <h2>
+    <div class="col-sm-11">
+        <h2>
         <a asp-action="Create">Create Instructor</a>
     </h2>
     <div class="table-responsive">
 
         <table class="table table-hover table-striped table-bordered">
-            <thead>
-                <tr>
+                <thead>
+                    <tr>
                     <th scope="col">#</th>
                     <th scope="col">First Name</th>
                     <th scope="col">Last Name</th>
@@ -64,19 +166,19 @@
                     <th scope="col">Password</th>
                     <th scope="col"></th>
                     <th scope="col"></th>
-                    <th scope="col"></th>
-                </tr>
+                <th scope="col"></th>
+            </tr>
             </thead>
-            <tbody>
-                @{
-                    var serialNumber = 1;
+                <tbody>
+                    @{
+                var serialNumber = 1;
                 }
                 @foreach (var item in Model.Data)
 
 
 
-                {
-                    <tr>
+                    {
+                        <tr>
                         <th scope="row">@serialNumber </th>
                         <td>@item.FirstName</td>
                         <td>@item.LastName</td>
@@ -85,32 +187,34 @@
                         <td>@item.StudentshipStatus</td>
                         <td>@item.Password</td>
 
-                        <td>
+                            <td>
                             <a asp-action="Detail" asp-route-id="@item.Id" class="btn btn-success">Detail</a>
                         </td>
-                        <td>
+                            <td>
                             <a asp-action="DeletePreview" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
                         </td>
-                        <td>
+                            <td>
                             <a asp-action="UpdateProfile" asp-route-id="@item.Id" class="btn btn-info">Profile</a>
                             <a asp-action="UpdateAddressDetail" asp-route-id="@item.Id" class="btn btn-info">Address</a>
                             <a asp-action="ListOfBankDetail" asp-route-id="@item.Id" class="btn btn-info">Bank</a>
-                        </td>
+                    </td>
 
 
                     </tr>
 
-                    serialNumber++;
+                serialNumber++;
 
 
 
-                }
+            }
 
 
-            </tbody>
+        </tbody>
 
-        </table>
+    </table>
+            </div>
+
+     </div>
     </div>
-
-</div>
-</div>
+    */
+}
