--- a/EasyLearn/Views/Shared/_Studentsidebar.cshtml
+++ b/EasyLearn/Views/Shared/_Studentsidebar.cshtml
@@ -29,6 +29,7 @@
                         <ul class="sub-menu" aria-expanded="false">
                             <li><a asp-controller="Course" asp-action="">Available Courses</a></li>
                             <li><a asp-controller="Course" asp-action="GetEnrolledCourses">Enrolled Courses</a></li>
+                            <li><a asp-controller="Course" asp-action="UnpaidCourse">Unpaid Courses</a></li>
                             <li><a asp-controller="Course" asp-action="StudentActiveCourses">Active Courses</a></li>
                             <li><a asp-controller="Course" asp-action="GetCompletedCourses">Completed Courses</a></li>
                         
