--- a/EasyLearn/Views/Course/Detail.cshtml
+++ b/EasyLearn/Views/Course/Detail.cshtml
@@ -57,8 +57,9 @@
                     <hr class="my-0" />
                     <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center pb-2 mb-1">
-                            <a href="#!" class="text-dark fw-bold">Cancel</a>
-                            <button type="button" class="btn btn-primary">Buy now</button>
+                            <a asp-controller="Course" asp-action="index" asp-route-courseId="@Model.Data.Id" class="text-dark fw-bold">Cancel</a>
+                            @*<a asp-controller="Enrolment" asp-action="Create" asp-route-courseId="@Model.Data.Id" class="text-dark fw-bold">Cancel</a>*@
+                            <a asp-controller="Enrolment" asp-action="Create" asp-route-courseId="@Model.Data.Id" class="btn btn-primary"> Buy now </a>
                         </div>
                     </div>
                 </div>
@@ -66,6 +67,9 @@
         </div>
     </div>
 </section>
+
+
+<!--
 
 
 <div class="row">
@@ -130,3 +134,4 @@
 
     </div>
 </div>
+-->
